--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,9 +1,13 @@
-<div>
+<link rel="stylesheet" href="/css/sign_in.css">
+
+<!-- Sign in page -->
+<div class="login-box">
+    <!-- heading -->
     <h1>Sign In</h1>
 
-    <form action="/users/create-session" method="post">
-        <input type="email" name="email" placeholder="Email" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <input type="submit" value="Login"> 
+    <form action="/users/create-session" method="post">  
+        <input type="email" name="email" placeholder="Email" required> <!-- user email  -->
+        <input type="password" name="password" placeholder="Password" required> <!-- password  -->
+        <input type="submit" value="Login">  <!-- Submit button  -->
     </form>
 </div>
