--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -1,6 +1,7 @@
+<link rel="stylesheet" href="/css/sign_up.css">
 
-
-<div>
+<!-- sign up page -->
+<div class="signup-box">
     <h1>Sign Up</h1>
 
     <!-- Sign Up form  -->
