--- a/assets/scss/admin_dashboard.scss
+++ b/assets/scss/admin_dashboard.scss
@@ -2,6 +2,7 @@
 
     width: 60rem;
     margin: auto;
+
     
     table {
        
@@ -38,7 +39,7 @@
            
             tr {
                 border-bottom: 1px solid rgba(220, 217, 217, 0.472);
-                
+               
                 .btn {
                     margin: 0 0.3rem;
                     height: 2.5rem;
@@ -52,7 +53,7 @@
                     transition: 0.3s transform;
                     &:hover {
                         transform: scale(1.2);
-                        background-color: f44336;
+                        background-color: #f44336;
                         cursor: pointer;
                     }
                 }
@@ -83,6 +84,7 @@
                     font-weight: 500;
                     height: 4rem;   
                     padding-left: 0.5rem;
+                    
                     
                 }
 
