--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -15,10 +15,10 @@
                     <th scope="col" class="p-1">#</th>
                     <th scope="col">Name</th>
                     <th scope="col">email</th>
-                    <th scope="col">Admin</th>
-                    <th scope="col">Delete</th>
-                    <th scope="col">Edit</th>
-                    <th scope="col">Assign Review</th>
+                    <th scope="col">Role</th>
+                    <th scope="col" class="p-1">Delete</th>
+                    <th scope="col" class="p-1">Edit</th>
+                    <th scope="col" class="p-1">Assign Review</th>
                 </tr>
             </thead>
             <tbody>
@@ -47,7 +47,7 @@
                         </td>
                         <td>
                             <div class="btn assign-btn">
-                                <a href="/admin/assign-review/<%= users[i]._id %>">Assign Review</a>
+                                <a href="/review/assign-review/<%= users[i]._id %>">Assign Review</a>
                             </div>
                         </td>
                     </tr>
