added assign review

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -17,7 +17,7 @@
                 </li>
 
                 <li>
-                    <a href="/review/assign-review">Assign Review</a>
+                    <a href="/admin/assign-review">Assign Review</a>
                 </li>
 
                 <li>
