--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -25,7 +25,7 @@
                 </li>
 
                 <li>
-                    <a href="users/sign-out">Logout</a>
+                    <a href="/users/sign-out">Logout</a>
                 </li>
 
             <% } else {%>
@@ -34,7 +34,7 @@
                 </li>
 
                 <li>
-                    <a href="users/sign-out">Logout</a>
+                    <a href="/users/sign-out">Logout</a>
                 </li>
             <% } %>
         <% } else {%>
