--- a/views/add_employee.ejs
+++ b/views/add_employee.ejs
@@ -4,7 +4,7 @@
 
     <div id="employee-container">
 
-        <h2>Employee Details</h2>
+        <h2>Employee Details</h>
 
         <form action="/admin/create-employee" method="post">
 
