--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -12,4 +12,9 @@
         <input type="password" name="confirmPassword" placeholder="Confirm Password" required> <!-- confirm password input  -->
         <input type="submit" value="Sign Up"> <!--submit  -->
     </form>
+
+    <p>
+        Already have an account? <a href="/users/sign-in">Login</a>
+    </p>
+    
 </div>
