--- a/assets/css/sign_in.css
+++ b/assets/css/sign_in.css
@@ -1,6 +1,6 @@
 .login-box {
   width: 25rem;
-  height: 22rem;
+  height: 25rem;
   margin: auto;
   margin-top: 6.5rem;
   background-image: linear-gradient(65deg, #A9F1DF, #FFBBBB);
@@ -47,4 +47,17 @@
   background-color: #4bb543;
   transform: scale(1.2);
   cursor: pointer;
+}
+.login-box p {
+  margin-top: 1.7rem;
+  text-align: center;
+  font-size: 1.3rem;
+  font-weight: 500;
+  color: lightslategrey;
+}
+.login-box p a {
+  color: blue;
+}
+.login-box p a:hover {
+  color: rgba(0, 106, 255, 0.824);
 }
