--- a/assets/css/sign_up.css
+++ b/assets/css/sign_up.css
@@ -1,6 +1,6 @@
 .signup-box {
   width: 30rem;
-  height: 30rem;
+  height: 32rem;
   margin: auto;
   margin-top: 4rem;
   background-image: linear-gradient(65deg, #A9F1DF, #FFBBBB);
@@ -48,4 +48,16 @@
   background-color: #4bb543;
   transform: scale(1.2);
   cursor: pointer;
+}
+.signup-box p {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: lightslategrey;
+}
+.signup-box p a {
+  color: blue;
+}
+.signup-box p a:hover {
+  color: rgba(0, 106, 255, 0.824);
 }
