--- a/assets/scss/add_employee.scss
+++ b/assets/scss/add_employee.scss
@@ -4,7 +4,8 @@
    
     h2 {
         position: absolute;
-        left: 25.2rem;
+        left: 27.2rem;
+        top: 3rem;
         
     } 
 
@@ -13,8 +14,9 @@
         flex-direction: column;
         justify-content: center;
         width: 40rem;
-        margin-left: 23.2rem;
-        margin-top: 2rem;
+        // margin-left: 23.2rem;
+        margin-top: -2rem;
+        margin-left: -2rem;
         min-height: 60vh;
         gap: 1rem;
         background-color: #1d2b3a;
