--- a/assets/scss/sign_in.scss
+++ b/assets/scss/sign_in.scss
@@ -3,7 +3,7 @@
 // main container
 .login-box {
     width: 25rem;
-    height: 22rem;
+    height: 25rem;
     margin: auto;
     margin-top: 6.5rem;
     background-image: linear-gradient(65deg, #A9F1DF, #FFBBBB);
@@ -57,6 +57,22 @@
                 background-color: #4bb543;
                 transform: scale(1.2);
                 cursor: pointer;
+            }
+        }
+    }
+
+    p {
+        margin-top: 1.7rem;
+        text-align: center;
+        font-size: 1.3rem;
+        font-weight: 500;
+        color: lightslategrey;
+
+        a{
+            color: blue;
+
+            &:hover {
+                color: rgba(0, 106, 255, 0.824);
             }
         }
     }
