--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -10,4 +10,8 @@
         <input type="password" name="password" placeholder="Password" required> <!-- password  -->
         <input type="submit" value="Login">  <!-- Submit button  -->
     </form>
+
+    <p>
+        Don't have an account? <a href="/users/sign-up">Sign up</a>
+    </p>
 </div>
