--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,6 +16,9 @@
     <!-- linking css file -->
     <link rel="stylesheet" href="/css/layout.css">
 
+    <!-- fontawsome -->
+    <script src="https://kit.fontawesome.com/4757ac8be3.js" crossorigin="anonymous"></script>
+
     <%- style %>
 </head>
 <body>
