--- a/assets/css/add_review.css
+++ b/assets/css/add_review.css
@@ -1,10 +1,10 @@
 #review-container {
   position: relative;
+  border: 1px solid #1d2b3a;
 }
 #review-container h2 {
   position: absolute;
   left: 24.5rem;
-  top: -4rem;
 }
 #review-container form {
   display: flex;
