fixed css issue

--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -1,5 +1,6 @@
 footer {
     display: flex;
+    margin-top: 2rem;
     justify-content: space-evenly;
     background-color: #161b21;
     align-items: center;
